fixed mobile overflow problem

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
 font-family: sans-serif;
 scroll-behavior: smooth;
+ overflow-x: hidden;
 }
 
 body {
